--- a/informacion/actividades.html
+++ b/informacion/actividades.html
@@ -67,7 +67,11 @@
           </div>
         </div>
         <div class="activity" id="actLeft">
-          <img id="miniature" src="../images/actividades/activity1.png" />
+          <img
+            id="miniature"
+            src="../images/actividades/activity1.png"
+            alt="Actividad de Conciertos"
+          />
           <div class="text">
             <div id="rol">
               <p>Música</p>
@@ -87,7 +91,11 @@
         </div>
 
         <div class="activity" id="actRight">
-          <img id="miniatureRight" src="../images/actividades/activity2.jpg" />
+          <img
+            id="miniatureRight"
+            src="../images/actividades/activity2.jpg"
+            alt="Actividad de Coches tunning temáticos"
+          />
           <div class="text" id="textRight">
             <div id="rol">
               <p>Exposición</p>
@@ -105,7 +113,11 @@
           </div>
         </div>
         <div class="activity" id="actLeft">
-          <img id="miniature" src="../images/actividades/activity3.png" />
+          <img
+            id="miniature"
+            src="../images/actividades/activity3.png"
+            alt="Actividad de Torneos"
+          />
           <div class="text">
             <div id="rol">
               <p>Juegos</p>
@@ -127,7 +139,11 @@
         </div>
 
         <div class="activity" id="actRight">
-          <img id="miniatureRight" src="../images/actividades/activity6.jpg" />
+          <img
+            id="miniatureRight"
+            src="../images/actividades/activity6.jpg"
+            alt="Actividad de Bodas Otakus"
+          />
           <div class="text" id="textRight">
             <div id="rol">
               <p>Social</p>
@@ -149,7 +165,11 @@
         </div>
 
         <div class="activity" id="actLeft">
-          <img id="miniature" src="../images/actividades/activity7.jpg" />
+          <img
+            id="miniature"
+            src="../images/actividades/activity7.jpg"
+            alt="Actividad de Talleres"
+          />
           <div class="text">
             <div id="rol">
               <p>Formación y entretenimiento</p>
@@ -169,7 +189,11 @@
         </div>
 
         <div class="activity" id="actRight">
-          <img id="miniatureRight" src="../images/actividades/activity8.jpg" />
+          <img
+            id="miniatureRight"
+            src="../images/actividades/activity8.jpg"
+            alt="Actividad de Charlas"
+          />
           <div class="text" id="textRight">
             <div id="rol">
               <p>Social</p>
@@ -188,7 +212,11 @@
         </div>
 
         <div class="activity" id="actLeft">
-          <img id="miniature" src="../images/actividades/activity9.jpg" />
+          <img
+            id="miniature"
+            src="../images/actividades/activity9.jpg"
+            alt="Actividad de Firmas"
+          />
           <div class="text">
             <div id="rol">
               <p>Social</p>
