--- a/informacion/concursos.html
+++ b/informacion/concursos.html
@@ -68,13 +68,17 @@
           </div>
         </div>
         <div class="activity" id="actLeft">
-          <img id="miniature" src="../images/concursos/concurso1.jpg" />
+          <img
+            id="miniature"
+            src="../images/concursos/concurso1.jpg"
+            alt="Concurso de Asian Cover Dance"
+          />
           <div class="text">
             <div id="rol">
               <p>Cosplay</p>
             </div>
             <div id="titlesActivity">
-              Asian cover Dance
+              Asian Cover Dance
             </div>
             <div id="description">
               <p>
@@ -86,7 +90,11 @@
         </div>
 
         <div class="activity" id="actRight">
-          <img id="miniatureRight" src="../images/concursos/concurso2.jpg" />
+          <img
+            id="miniatureRight"
+            src="../images/concursos/concurso2.jpg"
+            alt="Concurso de Pop Culture Hiroshima"
+          />
           <div class="text" id="textRight">
             <div id="rol">
               <p>Cosplay</p>
@@ -106,7 +114,11 @@
           </div>
         </div>
         <div class="activity" id="actLeft">
-          <img id="miniature" src="../images/concursos/concurso3.jpg" />
+          <img
+            id="miniature"
+            src="../images/concursos/concurso3.jpg"
+            alt="Concurso de Karaoke"
+          />
           <div class="text">
             <div id="rol">
               <p>Música</p>
@@ -123,7 +135,11 @@
           </div>
         </div>
         <div class="activity" id="actRight">
-          <img id="miniatureRight" src="../images/concursos/concurso4.jpg" />
+          <img
+            id="miniatureRight"
+            src="../images/concursos/concurso4.jpg"
+            alt="Concurso de Pasarela Cosplay"
+          />
           <div class="text" id="textRight">
             <div id="rol">
               <p>Cosplay</p>
