--- a/informacion/invitados.html
+++ b/informacion/invitados.html
@@ -319,7 +319,7 @@
                   <p>Actor</p>
                 </div>
                 <div id="titles">
-                  Voces de overwatch
+                  Voces de Overwatch
                 </div>
                 <div id="description">
                   <p>
