--- a/informacion/noticias/noticia3.html
+++ b/informacion/noticias/noticia3.html
@@ -58,7 +58,7 @@
       <div class="main">
         <div class="breadcrumb">
           <ul>
-            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="../../index.html">Inicio</a></li>
             <li><a href="./noticia3.html">Nuevo videojuego de Magic</a></li>
           </ul>
         </div>
@@ -120,18 +120,18 @@
               >
             </div>
             <div>
-              <a href="./voluntariado.html">Voluntariado</a>
+              <a href="../footer/voluntariado.html">Voluntariado</a>
             </div>
           </div>
           <div class="colabout">
             <div>
-              <a href="./torneos.html">Bases de Torneos</a>
+              <a href="../footer/torneos.html">Bases de Torneos</a>
             </div>
             <div>
-              <a href="./concursos.html">Bases de Concursos</a>
+              <a href="../footer/concursos.html">Bases de Concursos</a>
             </div>
             <div>
-              <a href="./politica.html">Política de privacidad</a>
+              <a href="../footer/politica.html">Política de privacidad</a>
             </div>
           </div>
         </div>
