--- a/informacion/noticias/noticia1.html
+++ b/informacion/noticias/noticia1.html
@@ -72,7 +72,13 @@
         <div class="content">
           <article>
             <h1>Falleció Hiroshi Masuoka, la voz del Maestro Roshi</h1>
-
+            <div class="iframe">
+              <img
+                src="../../images/noticias/noticia1.jpg"
+                id="picture-article"
+                alt="Imagen noticia 1"
+              />
+            </div>
             <p>
               Se reportó el fallecimiento del actor de voz Hiroshi Masuoka
               debido a un cáncer rectal el pasado 21 de marzo, a la edad de 83
