--- a/informacion/noticias/noticia2.html
+++ b/informacion/noticias/noticia2.html
@@ -72,6 +72,13 @@
         <div class="content">
           <article>
             <h1>BTS aplaza su gira por España</h1>
+            <div class="iframe">
+              <img
+                src="../../images/noticias/noticia2.jpg"
+                id="picture-article"
+                alt="Imagen noticia 2"
+              />
+            </div>
             <p>
               En las últimas semanas, las redes sociales han sido un hervidero
               de lamentos, plegarias y ruegos de los fans de la «boy-band»
