--- a/informacion/noticias/noticia3.html
+++ b/informacion/noticias/noticia3.html
@@ -72,6 +72,13 @@
         <div class="content">
           <article>
             <h1>Nuevo juego de Magic: RPG Magic Legends</h1>
+            <div class="iframe">
+              <img
+                src="../../images/noticias/noticia3.jpg"
+                id="picture-article"
+                alt="Imagen noticia 3"
+              />
+            </div>
             <p>
               Magic Legends, el nuevo videojuego de rol y acción de corte free
               to play basado en la popular franquicia Magic: The Gathering,
