--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                   Información &#9660;
                 </button>
                 <div class="dropdown-content">
-                  <a  href="./informacion/invitados.html">Invitados</a>
+                  <a href="./informacion/invitados.html">Invitados</a>
                   <a href="./informacion/actividades.html">Actividades</a>
                   <a href="./informacion/concursos.html">Concursos</a>
                 </div>
@@ -70,15 +70,15 @@
               <div class="artist">
                 <a href="./informacion/invitados/overwatchvoices.html"
                   ><img
-                    id="confirmation"
+                    class="confirmation"
                     src="./images/artistas/artist11.jpg"
                     alt="Invitados Overwatch"
                 /></a>
                 <div class="text">
-                  <div id="rol">
+                  <div class="rol">
                     <p>Actor</p>
                   </div>
-                  <div id="titles">
+                  <div class="titles">
                     Voces de Overwatch
                   </div>
                 </div>
@@ -87,16 +87,16 @@
               <div class="artist">
                 <a href="./informacion/invitados/poltattoo.html">
                   <img
-                    id="confirmation"
+                    class="confirmation"
                     src="./images/artistas/artist12.jfif"
                     alt="Invitado Pol Tattoo"
                   />
                 </a>
                 <div class="text">
-                  <div id="rol">
+                  <div class="rol">
                     <p>Arte</p>
                   </div>
-                  <div id="titles">
+                  <div class="titles">
                     Pol Tattoo
                   </div>
                 </div>
@@ -117,15 +117,15 @@
               <div class="artist">
                 <a href="./informacion/concursos.html"
                   ><img
-                    id="confirmation"
+                    class="confirmation"
                     src="./images/concursos/concurso1.jpg"
                     alt="Concurso Asian Cover Dance"
                 /></a>
                 <div class="text">
-                  <div id="rol">
+                  <div class="rol">
                     <p>Actor</p>
                   </div>
-                  <div id="titles">
+                  <div class="titles">
                     Asian Cover Dance
                   </div>
                 </div>
@@ -134,16 +134,16 @@
               <div class="artist">
                 <a href="./informacion/concursos.html">
                   <img
-                    id="confirmation"
+                    class="confirmation"
                     src="./images/concursos/concurso2.jpg"
                     alt="Concurso Pop Culture Hiroshima"
                   />
                 </a>
                 <div class="text">
-                  <div id="rol">
+                  <div class="rol">
                     <p>Arte</p>
                   </div>
-                  <div id="titles">
+                  <div class="titles">
                     Pop Culture Hiroshima
                   </div>
                 </div>
@@ -172,7 +172,7 @@
           <div class="new">
             <a href="./informacion/noticias/noticia1.html"
               ><img
-                id="miniature"
+                class="miniature"
                 src="./images/noticias/noticia1.jpg"
                 alt="Noticia Hiroshi Masuoka"
             /></a>
@@ -183,7 +183,7 @@
           <div class="new">
             <a href="./informacion/noticias/noticia2.html"
               ><img
-                id="miniature"
+                class="miniature"
                 src="./images/noticias/noticia2.jpg"
                 alt="Noticia BTS"
             /></a>
@@ -194,7 +194,7 @@
           <div class="new">
             <a href="./informacion/noticias/noticia3.html"
               ><img
-                id="miniature"
+                class="miniature"
                 src="./images/noticias/noticia3.jpg"
                 alt="Noticia RPG Magic Legends"
             /></a>
@@ -238,19 +238,19 @@
         </div>
         <div class="contacto">
           <div class="contactos">
-            <img id="iconos" src="./images/iconos/rss.png" alt="Icono RSS" />
+            <img class="iconos" src="./images/iconos/rss.png" alt="Icono RSS" />
             <img
-              id="iconos"
+              class="iconos"
               src="./images/iconos/twitter.png"
               alt="Icono Twitter"
             />
             <img
-              id="iconos"
+              class="iconos"
               src="./images/iconos/facebook.png"
               alt="Icono Facebook"
             />
             <img
-              id="iconos"
+              class="iconos"
               src="./images/iconos/insta.png"
               alt="Icono Instagram"
             />
