--- a/informacion/invitados.html
+++ b/informacion/invitados.html
@@ -80,7 +80,7 @@
                 <div id="rol">
                   <p>Música</p>
                 </div>
-                <div id="titles">
+                <div class="titles">
                   FAKY
                 </div>
                 <div id="description">
@@ -102,7 +102,7 @@
                 <div id="rol">
                   <p>Música</p>
                 </div>
-                <div id="titles">
+                <div class="titles">
                   Kiki vivi lily
                 </div>
                 <div id="description">
@@ -125,7 +125,7 @@
                 <div id="rol">
                   <p>Anime</p>
                 </div>
-                <div id="titles">
+                <div class="titles">
                   Odashima
                 </div>
                 <div id="description">
@@ -149,7 +149,7 @@
                   <div id="rol">
                     <p>Cosplay</p>
                   </div>
-                  <div id="titles">
+                  <div class="titles">
                     Shirogane
                   </div>
                   <div id="description">
@@ -173,7 +173,7 @@
                 <div id="rol">
                   <p>Música</p>
                 </div>
-                <div id="titles">
+                <div class="titles">
                   SUKISHA
                 </div>
                 <div id="description">
@@ -197,7 +197,7 @@
                 <div id="rol">
                   <p>Arte</p>
                 </div>
-                <div id="titles">
+                <div class="titles">
                   Laia López
                 </div>
                 <div id="description">
@@ -223,7 +223,7 @@
                 <div id="rol">
                   <p>Cosplay</p>
                 </div>
-                <div id="titles">
+                <div class="titles">
                   Ginny Di
                 </div>
                 <div id="description">
@@ -247,7 +247,7 @@
                 <div id="rol">
                   <p>Cosplay</p>
                 </div>
-                <div id="titles">
+                <div class="titles">
                   Jenna Lynn
                 </div>
                 <div id="description">
@@ -271,7 +271,7 @@
                 <div id="rol">
                   <p>Arte</p>
                 </div>
-                <div id="titles">
+                <div class="titles">
                   H Alexander
                 </div>
                 <div id="description">
@@ -296,7 +296,7 @@
                 <div id="rol">
                   <p>Música</p>
                 </div>
-                <div id="titles">
+                <div class="titles">
                   Lady Beard
                 </div>
                 <div id="description">
@@ -318,7 +318,7 @@
                 <div id="rol">
                   <p>Actor</p>
                 </div>
-                <div id="titles">
+                <div class="titles">
                   Voces de Overwatch
                 </div>
                 <div id="description">
@@ -342,7 +342,7 @@
                 <div id="rol">
                   <p>Arte</p>
                 </div>
-                <div id="titles">
+                <div class="titles">
                   Pol Tattoo
                 </div>
                 <div id="description">
@@ -386,19 +386,19 @@
         </div>
         <div class="contacto">
           <div class="contactos">
-            <img id="iconos" src="../images/iconos/rss.png" alt="Icono RSS" />
+            <img class="iconos" src="../images/iconos/rss.png" alt="Icono RSS" />
             <img
-              id="iconos"
+              class="iconos"
               src="../images/iconos/twitter.png"
               alt="Icono Twitter"
             />
             <img
-              id="iconos"
+              class="iconos"
               src="../images/iconos/facebook.png"
               alt="Icono Facebook"
             />
             <img
-              id="iconos"
+              class="iconos"
               src="../images/iconos/insta.png"
               alt="Icono Instagram"
             />
