--- a/informacion/invitados/halex.html
+++ b/informacion/invitados/halex.html
@@ -157,22 +157,22 @@
         <div class="contacto">
           <div class="contactos">
             <img
-              id="iconos"
+              class="iconos"
               src="../../images/iconos/rss.png"
               alt="Icono RSS"
             />
             <img
-              id="iconos"
+              class="iconos"
               src="../../images/iconos/twitter.png"
               alt="Icono Twitter"
             />
             <img
-              id="iconos"
+              class="iconos"
               src="../../images/iconos/facebook.png"
               alt="Icono Facebook"
             />
             <img
-              id="iconos"
+              class="iconos"
               src="../../images/iconos/insta.png"
               alt="Icono Instagram"
             />
