--- a/entradas/inscripcion.html
+++ b/entradas/inscripcion.html
@@ -162,19 +162,19 @@
         </div>
         <div class="contacto">
           <div class="contactos">
-            <img id="iconos" src="../images/iconos/rss.png" alt="Icono RSS" />
+            <img class="iconos" src="../images/iconos/rss.png" alt="Icono RSS" />
             <img
-              id="iconos"
+              class="iconos"
               src="../images/iconos/twitter.png"
               alt="Icono Twitter"
             />
             <img
-              id="iconos"
+              class="iconos"
               src="../images/iconos/facebook.png"
               alt="Icono Facebook"
             />
             <img
-              id="iconos"
+              class="iconos"
               src="../images/iconos/insta.png"
               alt="Icono Instagram"
             />
