--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 src="./images/noticias/noticia1.jpg"
                 alt="Noticia Hiroshi Masuoka"
             /></a>
-            <div id="description">
+            <div class="description">
               <p>Falleció Hiroshi Masuoka, la voz del Maestro Roshi</p>
             </div>
           </div>
@@ -187,7 +187,7 @@
                 src="./images/noticias/noticia2.jpg"
                 alt="Noticia BTS"
             /></a>
-            <div id="description">
+            <div class="description">
               <p>BTS aplaza su gira por España</p>
             </div>
           </div>
@@ -198,7 +198,7 @@
                 src="./images/noticias/noticia3.jpg"
                 alt="Noticia RPG Magic Legends"
             /></a>
-            <div id="description">
+            <div class="description">
               <p>Nuevo juego de Magic: RPG Magic Legends</p>
             </div>
           </div>
