--- a/informacion/concursos.html
+++ b/informacion/concursos.html
@@ -91,7 +91,7 @@
 
         <div class="activity" id="actRight">
           <img
-            id="miniatureRight"
+            id="miniature"
             src="../images/concursos/concurso2.jpg"
             alt="Concurso de Pop Culture Hiroshima"
           />
@@ -136,7 +136,7 @@
         </div>
         <div class="activity" id="actRight">
           <img
-            id="miniatureRight"
+            id="miniature"
             src="../images/concursos/concurso4.jpg"
             alt="Concurso de Pasarela Cosplay"
           />
@@ -188,19 +188,23 @@
         </div>
         <div class="contacto">
           <div class="contactos">
-            <img id="iconos" src="../images/iconos/rss.png" alt="Icono RSS" />
             <img
-              id="iconos"
+              class="iconos"
+              src="../images/iconos/rss.png"
+              alt="Icono RSS"
+            />
+            <img
+              class="iconos"
               src="../images/iconos/twitter.png"
               alt="Icono Twitter"
             />
             <img
-              id="iconos"
+              class="iconos"
               src="../images/iconos/facebook.png"
               alt="Icono Facebook"
             />
             <img
-              id="iconos"
+              class="iconos"
               src="../images/iconos/insta.png"
               alt="Icono Instagram"
             />
