--- a/informacion/actividades.html
+++ b/informacion/actividades.html
@@ -92,7 +92,7 @@
 
         <div class="activity" id="actRight">
           <img
-            id="miniatureRight"
+            id="miniature"
             src="../images/actividades/activity2.jpg"
             alt="Actividad de Coches tunning temáticos"
           />
@@ -140,7 +140,7 @@
 
         <div class="activity" id="actRight">
           <img
-            id="miniatureRight"
+            id="miniature"
             src="../images/actividades/activity6.jpg"
             alt="Actividad de Bodas Otakus"
           />
@@ -190,7 +190,7 @@
 
         <div class="activity" id="actRight">
           <img
-            id="miniatureRight"
+            id="miniature"
             src="../images/actividades/activity8.jpg"
             alt="Actividad de Charlas"
           />
@@ -263,7 +263,11 @@
         </div>
         <div class="contacto">
           <div class="contactos">
-            <img class="iconos" src="../images/iconos/rss.png" alt="Icono RSS" />
+            <img
+              class="iconos"
+              src="../images/iconos/rss.png"
+              alt="Icono RSS"
+            />
             <img
               class="iconos"
               src="../images/iconos/twitter.png"
