--- a/horarios/horarios.html
+++ b/horarios/horarios.html
@@ -506,7 +506,11 @@
         </div>
         <div class="contacto">
           <div class="contactos">
-            <img class="iconos" src="../images/iconos/rss.png" alt="Icono RSS" />
+            <img
+              class="iconos"
+              src="../images/iconos/rss.png"
+              alt="Icono RSS"
+            />
             <img
               class="iconos"
               src="../images/iconos/twitter.png"
