--- a/informacion/actividades.html
+++ b/informacion/actividades.html
@@ -155,9 +155,7 @@
               <p>
                 ¿Sientes que estás muy unido a tu almohada impresa? Entonces, no
                 te pierdas nuestro evento más popular y rompedor: tráela y os
-                casaremos en una bonita ceremonia al que asistirá como público
-                tus amigos y/o las almohadas que elijas de entre nuestra
-                disponibilidad. Como alternativa, también puedes casarte con una
+                casaremos en una bonita ceremonia. También puedes traer a una
                 persona real.
               </p>
             </div>
