--- a/entradas/inscripcion.html
+++ b/entradas/inscripcion.html
@@ -97,9 +97,9 @@
             <div class="col">
               <label for="dias">Tipo de Entrada</label>
               <select required id="dias" name="dias">
-                <option value="unDia">Un día - 99&euro;</option>
-                <option value="dosDias">Dos días - 999&euro;</option>
-                <option value="tresDias">Tres dias - 696969696969&euro;</option>
+                <option value="10">Un día - 10&euro;</option>
+                <option value="19">Dos días - 19&euro;</option>
+                <option value="28">Tres dias - 28&euro;</option>
               </select>
             </div>
             <div class="col">
@@ -162,7 +162,11 @@
         </div>
         <div class="contacto">
           <div class="contactos">
-            <img class="iconos" src="../images/iconos/rss.png" alt="Icono RSS" />
+            <img
+              class="iconos"
+              src="../images/iconos/rss.png"
+              alt="Icono RSS"
+            />
             <img
               class="iconos"
               src="../images/iconos/twitter.png"
