--- a/entradas/inscripcion.html
+++ b/entradas/inscripcion.html
@@ -96,7 +96,7 @@
             </div>
             <div class="col">
               <label for="dias">Tipo de Entrada</label>
-              <select required id="dias" name="dias">
+              <select id="dias" name="dias">
                 <option value="10">Un día - 10&euro;</option>
                 <option value="19">Dos días - 19&euro;</option>
                 <option value="28">Tres dias - 28&euro;</option>
