--- a/informacion/actividades.html
+++ b/informacion/actividades.html
@@ -68,7 +68,8 @@
         </div>
         <div class="activity" id="actLeft">
           <img
-            id="miniature"
+            class="miniature"
+            id="miniature1"
             src="../images/actividades/activity1.png"
             alt="Actividad de Conciertos"
           />
@@ -92,7 +93,7 @@
 
         <div class="activity" id="actRight">
           <img
-            id="miniature"
+            class="miniature"
             src="../images/actividades/activity2.jpg"
             alt="Actividad de Coches tunning temáticos"
           />
@@ -114,7 +115,7 @@
         </div>
         <div class="activity" id="actLeft">
           <img
-            id="miniature"
+            class="miniature"
             src="../images/actividades/activity3.png"
             alt="Actividad de Torneos"
           />
@@ -140,7 +141,8 @@
 
         <div class="activity" id="actRight">
           <img
-            id="miniature"
+            class="miniature"
+            id="miniature1"
             src="../images/actividades/activity6.jpg"
             alt="Actividad de Bodas Otakus"
           />
@@ -164,7 +166,7 @@
 
         <div class="activity" id="actLeft">
           <img
-            id="miniature"
+            class="miniature"
             src="../images/actividades/activity7.jpg"
             alt="Actividad de Talleres"
           />
@@ -188,7 +190,8 @@
 
         <div class="activity" id="actRight">
           <img
-            id="miniature"
+            class="miniature"
+            id="miniature1"
             src="../images/actividades/activity8.jpg"
             alt="Actividad de Charlas"
           />
@@ -211,7 +214,8 @@
 
         <div class="activity" id="actLeft">
           <img
-            id="miniature"
+            class="miniature"
+            id="miniature1"
             src="../images/actividades/activity9.jpg"
             alt="Actividad de Firmas"
           />
