--- a/informacion/concursos.html
+++ b/informacion/concursos.html
@@ -69,7 +69,7 @@
         </div>
         <div class="activity" id="actLeft">
           <img
-            id="miniature"
+            class="miniature"
             src="../images/concursos/concurso1.jpg"
             alt="Concurso de Asian Cover Dance"
           />
@@ -91,7 +91,7 @@
 
         <div class="activity" id="actRight">
           <img
-            id="miniature"
+            class="miniature"
             src="../images/concursos/concurso2.jpg"
             alt="Concurso de Pop Culture Hiroshima"
           />
@@ -115,7 +115,7 @@
         </div>
         <div class="activity" id="actLeft">
           <img
-            id="miniature"
+            class="miniature"
             src="../images/concursos/concurso3.jpg"
             alt="Concurso de Karaoke"
           />
@@ -136,7 +136,7 @@
         </div>
         <div class="activity" id="actRight">
           <img
-            id="miniature"
+            class="miniature"
             src="../images/concursos/concurso4.jpg"
             alt="Concurso de Pasarela Cosplay"
           />
