--- a/informacion/actividades.html
+++ b/informacion/actividades.html
@@ -69,6 +69,7 @@
         <div class="activity" id="actLeft">
           <img
             class="miniature"
+            id="miniature2"
             src="../images/actividades/activity1.png"
             alt="Actividad de Conciertos"
           />
@@ -192,6 +193,7 @@
         <div class="activity" id="actRight">
           <img
             class="miniature"
+            id="miniature2"
             src="../images/actividades/activity8.jpg"
             alt="Actividad de Charlas"
           />
@@ -215,6 +217,7 @@
         <div class="activity" id="actLeft">
           <img
             class="miniature"
+            id="miniature2"
             src="../images/actividades/activity9.jpg"
             alt="Actividad de Firmas"
           />
